[metadata]
name = mosaic
license = BSD 3-Clause license
version = 0.1

[options]
package_dir =
    =src
packages = find:
install_requires =
    click
    hnswlib
    matplotlib
    numpy
    opencv-python-headless
    requests
    scipy
    tqdm

[options.entry_points]
console_scripts =
    mosaic = mosaic.cli:main

[options.extras_require]
dev =
    flake8
    mypy
    numpy-stubs @ https://github.com/numpy/numpy-stubs/archive/f3c6315738489983f5f37e1477ac68373d71b470.zip
