[metadata]
name = mosaic
license = BSD 3-Clause license
version = 0.1

[options]
package_dir =
    =src
packages = find:
install_requires =
    click
    hnswlib
    matplotlib
    numpy
    pillow
    requests
    scipy
    tqdm

[options.entry_points]
console_scripts =
    mosaic = mosaic.cli:main

[options.extras_require]
dev =
    flake8
    mypy
