[metadata]
name = mosaic
license = BSD 3-Clause license
version = 1.0.2

[options]
package_dir =
    =src
packages = find:
install_requires =
    click
    hnswlib
    matplotlib
    numpy
    pillow
    requests
    scipy
    tqdm

[options.entry_points]
console_scripts =
    mosaic = mosaic.cli:main

[options.extras_require]
dev =
    flake8
    mypy
    mypy-extensions
    types-requests
    types-tqdm

[flake8]
format = ::error file=%(path)s,line=%(row)d,col=%(col)d,title=Flake8 - %(code)s,::%(text)s
